--- a/CustomPolicy/AppendPrivateSubnet.json
+++ b/CustomPolicy/AppendPrivateSubnet.json
@@ -2,7 +2,7 @@
     "properties": {
         "displayName": "Appned Private Subnet",
         "description": "Appned Private Subnet",
-        "mode": "Indexed",
+        "mode": "all",
         "parameters": {
             "effectType": {
                 "type": "string",
@@ -32,10 +32,12 @@
             },
             "then": {
                 "effect": "[parameters('effect')]",
-                "details": {
-                    "field": "Microsoft.Network/virtualnetworks/subnets/defaultOutboundAccess",
-                    "value": "false"
-                }
+                "details": [
+                    {
+                      "field": "Microsoft.Network/virtualnetworks/subnets/defaultOutboundAccess",
+                      "value": "false"
+                    }
+                  ]
             }
         }
     }
